--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nahin Ahmed</title>
-</head>
-<body>
-    
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style/home.css" />
+  </head>
+  <body class="font-open-sans">
+    <header>
+      <nav>
+        <div class="logo">
+            <h2>Nah<span class="color-orange">i</span>n</h2>
+        </div>
+
+      <ul class="menu">
+        <li><a href="">Portfolio</a></li>
+        <li><a href="">Blog</a></li>
+        <li><button class="btn">Hire Me</button></li>
+      </ul>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
