--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body class="font-open-sans">
     <header>
+
       <nav>
         <div class="logo">
             <h2>Nah<span class="color-orange">i</span>n</h2>
@@ -25,6 +26,25 @@
         <li><button class="btn">Hire Me</button></li>
       </ul>
       </nav>
+
+      <section id="banner-container">
+
+        <div class="banner-content">
+            <h2>Hi, I am</h2>
+            <h1>Nahin Ahmed</h1>
+            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <div>
+                <button class="btn">Download CV</button>
+                <button class="btn">Contact</button>
+            </div>
+        </div>
+
+        <div class="banner-image">
+            <img src="./images/hardy.png" alt="">
+        </div>
+
+      </section>
+
     </header>
     <main></main>
     <footer></footer>
