--- a/index.html
+++ b/index.html
@@ -46,7 +46,41 @@
       </section>
 
     </header>
-    <main></main>
+    <main>
+
+      <section id="about">
+
+        <div class="about-container">
+
+          <div class="section-heading">
+            <h2>About me</h2>
+            <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+          </div>
+
+          <div class="about-info">
+            <div class="info-card">
+              <p>Name:</p>
+              <h4>Nahin Ahmed</h4>
+            </div>
+            <div class="info-card">
+              <p>Email:</p>
+              <h4>nahinahmed113@gmail.com</h4>
+            </div>
+            <div class="info-card">
+              <p>Date of birth:</p>
+              <h4>13 September 2000</h4>
+            </div>
+            <div class="info-card">
+              <p>From:</p>
+              <h4>Mirpur, Dhaka</h4>
+            </div>
+          </div>
+
+        </div>
+
+      </section>
+
+    </main>
     <footer></footer>
   </body>
 </html>
