--- a/index.html
+++ b/index.html
@@ -14,47 +14,50 @@
   </head>
   <body class="font-open-sans">
     <header>
-
       <nav>
         <div class="logo">
-            <h2>Nah<span class="color-orange">i</span>n</h2>
+          <h2>Nah<span class="color-orange">i</span>n</h2>
         </div>
 
-      <ul class="menu">
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Blog</a></li>
-        <li><button class="btn">Hire Me</button></li>
-      </ul>
+        <ul class="menu">
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Blog</a></li>
+          <li><button class="btn">Hire Me</button></li>
+        </ul>
       </nav>
 
       <section id="banner-container">
-
         <div class="banner-content">
-            <h2>Hi, I am</h2>
-            <h1>Nahin Ahmed</h1>
-            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-            <div>
-                <button class="btn">Download CV</button>
-                <button class="btn">Contact</button>
-            </div>
+          <h2>Hi, I am</h2>
+          <h1>Nahin Ahmed</h1>
+          <p>
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <div>
+            <button class="btn">Download CV</button>
+            <button class="btn">Contact</button>
+          </div>
         </div>
 
         <div class="banner-image">
-            <img src="./images/hardy.png" alt="">
+          <img src="./images/hardy.png" alt="" />
         </div>
-
       </section>
-
     </header>
+
     <main>
-
       <section id="about">
-
         <div class="about-container">
-
           <div class="section-heading">
             <h2>About me</h2>
-            <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p>
+              I, m a designer & developer with a passion for web design. I enjoy
+              developing simple, clean and slick websites that provide real
+              value to the end user. Thousands of clients have procured
+              exceptional resulfs while working with me. Delivering work within
+              time and budget which meets clients requirements in our mata.
+            </p>
           </div>
 
           <div class="about-info">
@@ -75,50 +78,142 @@
               <h4>Mirpur, Dhaka</h4>
             </div>
           </div>
-
         </div>
-
       </section>
 
       <section id="skills">
         <div class="skills-container">
           <div class="section-heading">
             <h2>What I do</h2>
-            <p>I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <p>
+              I have more than 10 years experience building software for clients
+              all over the world. Below is a quick overview of my main technical
+              skill sets and technologies i use. Want to find out more about my
+              experience? Check out my online resume and project portfolio.
+            </p>
           </div>
 
           <div class="skill-box">
-
             <div class="skill-card">
-              <img src="./images/icons/js.png" alt="">
+              <img src="./images/icons/js.png" alt="" />
               <h3>Vanilla JavaScript</h3>
-              <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
             </div>
 
             <div class="skill-card">
-              <img src="./images/icons/react.png" alt="">
+              <img src="./images/icons/react.png" alt="" />
               <h3>React</h3>
-              <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
             </div>
 
             <div class="skill-card">
-              <img src="./images/icons/nodejs.png" alt="">
+              <img src="./images/icons/nodejs.png" alt="" />
               <h3>Node.js</h3>
-              <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
             </div>
 
             <div class="skill-card">
-              <img src="./images/icons/mongo.png" alt="">
+              <img src="./images/icons/mongo.png" alt="" />
               <h3>MongoDB</h3>
-              <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
             </div>
-
           </div>
-
         </div>
       </section>
 
+      <section id="resume">
+        <h2 class="section-heading">A summary of My Resume</h2>
+
+        <div class="resume-container">
+          <div class="education">
+            <h2 class="section-title">My Education</h2>
+            <div class="resume-card">
+              <h3 class="card-title">Master in Computer Engineering</h3>
+              <p class="card-info">Harvard University / 2015 - 2017</p>
+              <p class="card-text">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-card">
+              <h3 class="card-title">Master in Computer Engineering</h3>
+              <p class="card-info">Harvard University / 2015 - 2017</p>
+              <p class="card-text">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-card">
+              <h3 class="card-title">Master in Computer Engineering</h3>
+              <p class="card-info">Harvard University / 2015 - 2017</p>
+              <p class="card-text">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+
+          <div class="education">
+            <h2 class="section-title">My Experience</h2>
+            <div class="resume-card">
+              <h3 class="card-title">Sr. Font End Developer</h3>
+              <p class="card-info">Apple Inc / 2020 - Current</p>
+              <p class="card-text">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-card">
+              <h3 class="card-title">Jr. Font End Developer</h3>
+              <p class="card-info">Dribbble Inc / 2018 - 2022</p>
+              <p class="card-text">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <hr />
+            <div class="resume-card">
+              <h3 class="card-title">HTML Developer</h3>
+              <p class="card-info">Adobe Inc / 2017 - 2018</p>
+              <p class="card-text">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="item-center">
+          <button class="btn">Download CV</button>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      
+    </footer>
   </body>
 </html>
