--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="./style/home.css" />
   </head>
   <body class="font-open-sans">
@@ -35,8 +37,8 @@
             he. Morning because as to society behaved moments.
           </p>
           <div>
-            <button class="btn">Download CV</button>
-            <button class="btn">Contact</button>
+            <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
+            <button class="btn"><i class="fa-solid fa-phone"></i> Contact</button>
           </div>
         </div>
 
@@ -208,12 +210,35 @@
           </div>
         </div>
         <div class="item-center">
-          <button class="btn">Download CV</button>
+          <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
         </div>
       </section>
     </main>
     <footer>
-      
+      <section class="footer-section">
+        <div class="social">
+          <h2>Lets Connect</h2>
+          <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+          <div class="icons">
+            <img src="./images/icons/facebook.png" alt="">
+            <img src="./images/icons/twitter.png" alt="">
+            <img src="./images/icons/insta.png" alt="">
+          </div>
+        </div>
+        <form class="form">
+          <h2>Let’s Message me</h2>
+          <div>
+            <input type="text" placeholder="Your Name">
+          </div>
+          <div>
+            <input type="email" placeholder="Your Email">
+          </div>
+          <div>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+          </div>
+          <input class="btn" type="submit" value="Submit">
+        </form>
+      </section>
     </footer>
   </body>
 </html>
